crates/agent/nomi-browser-engine/tests/snapshots/observe_fixtures__observe_iframe_stitched.snap
---
source: crates/agent/nomi-browser-engine/tests/observe_fixtures.rs
expression: normalized
---
<data origin="file://<FIXTURE>/iframe.html">
- generic [active] [ref=f0e1]:
  - heading "Smoke" [level=1] [ref=f0e2]
  - button "Submit order" [ref=f0e3]
  - generic [ref=f0e4]:
    - text: Email
    - textbox "Email" [ref=f0e5]
  - iframe [ref=f0e6]:
    - link "Inner" [ref=f1e2] [cursor=pointer]:
      - /url: "#"
</data>
